Footer -> Extra Margin Fix

--- a/styles/footer.module.css
+++ b/styles/footer.module.css
@@ -61,8 +61,8 @@
   
   @media only screen and (max-width: 800px) {
     .footer {
-      margin: 1.5rem 0.5rem;
-      margin-bottom: 6rem;
+      margin: 2.5rem 0.5rem;
+      margin-bottom: 3rem;
     }
   
     .footer h2 {
